[gd_scene load_steps=4 format=3 uid="uid://cv8c7hsdsvfq2"]

[ext_resource type="Script" path="res://src/UI/Styles/body_blur.gd" id="1_ebs2h"]
[ext_resource type="PackedScene" uid="uid://bnbfjh0vj0q0x" path="res://src/UI/Components/input.tscn" id="1_ef0e7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3x4u"]
content_margin_right = 6.0
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="BodyBlur" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
offset_right = 191.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f3x4u")
script = ExtResource("1_ebs2h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_BLUR_OPTIONS"
text_overrun_behavior = 3

[node name="BlurOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
item_count = 2
selected = 0
popup/item_0/text = "KEY_ALL"
popup/item_0/id = 0
popup/item_1/text = "KEY_ONLY_OUTLINE"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_BLUR_SIZE"
text_overrun_behavior = 3

[node name="InputBlurSize" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("1_ef0e7")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/BlurOptionButton" to="." method="_on_blur_option_button_item_selected"]
[connection signal="changed" from="MarginContainer/VBoxContainer/HBoxContainer2/InputBlurSize" to="." method="_on_input_blur_size_changed"]
